@@ -12,6 +12,8 @@ Version 7.4  [ (to be announced) ]
     GENERAL:
         - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
     ENGINE:
+        Class BitManipulator<T>:
+            - New routine swapBits().
         Class IntOfBits<k>:
             - New type alias to simplify arithmetic when using IntOfSize<...>.
         Class Face<dim, dim-1>:
